--- a/app.json
+++ b/app.json
@@ -23,7 +23,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
+      [
+        "expo-router",
+        {
+          "origin": false
+        }
+      ],
       [
         "expo-splash-screen",
         {
